[gd_scene load_steps=2 format=3 uid="uid://dvx4j2k8qr1a5"]

[ext_resource type="Script" path="res://addons/simpleassetplacer/ui/toolbar_buttons.gd" id="1_toolbar"]

[node name="ToolbarButtons" type="HBoxContainer"]
script = ExtResource("1_toolbar")

[node name="PlacementModeButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
tooltip_text = "Cycle Placement Strategy
üéØ Collision-based
üìê Plane-based"
flat = true
text = "üéØ"

[node name="GridSnapButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
tooltip_text = "Toggle Grid Snapping
Snap objects to grid positions"
toggle_mode = true
flat = true
text = "üìè"

[node name="GridOverlayButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
tooltip_text = "Toggle Grid Overlay
Show/hide visual grid"
toggle_mode = true
flat = true
text = "üî≤"

[node name="SurfaceAlignButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
tooltip_text = "Toggle Surface Alignment
Align placement rotation to surface normals"
toggle_mode = true
flat = true
text = "SA"

[node name="SmoothTransformsButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
tooltip_text = "Toggle Smooth Transforms
Lerp preview and transform updates"
toggle_mode = true
flat = true
text = "SM"

[node name="RandomRotationButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
tooltip_text = "Toggle Random Y Rotation
Randomize rotation on placement"
toggle_mode = true
flat = true
text = "üîÑ"

[node name="TransformModeButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
tooltip_text = "Transform Mode
Edit placed objects
Position, Rotation, Scale"
toggle_mode = true
flat = true
text = "üîß"

[node name="ResetTransformsButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 28)
layout_mode = 2
tooltip_text = "Reset All Transforms
Clear position, rotation, scale, height offsets"
flat = true
text = "‚Ü∫"
